# clockdate-rustwidget

./: Cargo.toml  config.toml  log.txt
fonts/: font_date.flf
src/: config.rs  font.rs  main.rs
