[package]
name = "clockdate"
version = "0.2.0"
edition = "2021"

[dependencies]
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
gtk4 = { version = "0.8", features = ["v4_10"] }
gtk4-layer-shell = "0.3"
glib = "0.19"
cairo-rs = "0.19"
pango = "0.19"
pangocairo = "0.19"
ratatui = "0.24.0"
figlet-rs = "0.1.5"
